--- a/index.html
+++ b/index.html
@@ -1,5 +1,54 @@
 <!DOCTYPE html>
-<html>
-    <head><title>Test Page</title></head>
-    <body><h1>Test Page</h1></body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+        <title>Portal Home Page</title>
+        <meta name="description" content="This portal home page is for CIT230 assignments">
+    <link href="css/main.css" rel="stylesheet"
+    </head>
+    <body>
+        <header>
+            <h1>Kim L. Griffiths</h1>
+            <img id="myPortrait" src="images/KimPortrait.jpg" alt="Image of Kim">
+        </header>
+        <nav>
+            <h2>CIT 230: Assignment Portal</h2>
+            <ul>
+                <li>
+                    ::marker
+                    Lesson 02:
+                    <a href="">Assignment Link</a>
+                </li>
+                <li>
+                    ::marker
+                    Lesson 03:
+                    <a href="">Assignment Link</a>
+                </li>
+                <li>
+                    ::marker
+                    Lesson 04:
+                    <a href="">Assignment Link</a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+           
+
+        </main>
+        <footer>
+            &copy;
+            <span id="currentYear">2020</span>
+            | Kim L. Griffiths | Utah |
+            <a id="Byu_Link" href="http://www.byui.edu/online">BYUI Online Learning</a>
+            <p id="updated">
+                Last Updated:
+                <span id="lastModified">01/10/2020</span>
+            </p>
+
+        </footer>
+        <script src="js/portal.js"></script>
+
+    
+    </body>
 </html>
