--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
             <h2>CIT 230: Assignment Portal</h2>
             <ul>
                 <li>
-                    ::marker
+                    Lesson 01:
+                    <a href="">Assignment Link</a>
+                </li>
+                <li>
                     Lesson 02:
                     <a href="">Assignment Link</a>
                 </li>
                 <li>
-                    ::marker
                     Lesson 03:
                     <a href="">Assignment Link</a>
                 </li>
                 <li>
-                    ::marker
                     Lesson 04:
                     <a href="">Assignment Link</a>
                 </li>
