--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         <nav>
             <h2>CIT 230: Assignment Portal</h2>
             <ul>
-                <li>
-                    Lesson 01:
-                    <a href="">Assignment Link</a>
-                </li>
+            
                 <li>
                     Lesson 02:
                     <a href="">Assignment Link</a>
@@ -42,9 +39,7 @@
             <span id="currentYear">2020</span>
             | Kim L. Griffiths | Utah |
             <a id="Byu_Link" href="http://www.byui.edu/online">BYUI Online Learning</a>
-            <p id="updated">
-                Last Updated:
-                <span id="lastModified">01/10/2020</span>
+            <p id="updated"> Last Updated: <span id="lastModified"></span>
             </p>
 
         </footer>
