--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <title>Portal Home Page</title>
     <meta name="description" content="This portal home page is for CIT230 assignments">
-    <link href="css/main.css" rel="stylesheet" </head> <body>
+    <link rel="stylesheet" href="css/main.css"/>
+</head> 
+<body>
     <header>
         <h1>Kim L. Griffiths</h1>
         <img id="myPortrait" src="images/KimPortrait.jpg" alt="Image of Kim">
