--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 Lesson 03:
                 <a href="">Assignment Link</a>
             </li>
-            <li>Lesson 04: <a href="">Link</a> | <a href="">Link</a></li>
+            <li>Lesson 04: <a href="">Link</a> | <a href="">Link</a>
             </li>
         </ul>
     </nav>
