--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body>
     <header>
         <h1>Kim L. Griffiths</h1>
-        <img id="KimPortrait" src="http://127.0.0.1:5500/images/KimPortrait.jpg" alt="Image of Kim">
+        <img class="portrait"
+          src="images\KimPortrait.jpg"
+          alt="image of Kim"
+          width="250"
+        />
     </header>
     <nav>
         <h2>CIT 230: Assignment Portal</h2>
