--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Kim L. Griffiths</h1>
         <img class="portrait"
           src="images\KimPortrait.jpg"
-          alt="image of Kim"
+          alt="image of "
           width="250"
         />
     </header>
