--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
     <header>
         <h1>Kim L. Griffiths</h1>
-        <img class="portrait"
-          src="images\KimPortrait.jpg"
-          alt="image of "
+        <img id="myPortrait" src="images/KimPortrait.jpg" alt="Image of Kim">
           width="250"
         />
     </header>
