--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Kim L. Griffiths</h1>
-        <img id="myportrait" src="images/kimportrait.jpg" alt="Image of Kim">
+        <img src="images/kimportrait.jpg" alt="Image of Kim">
         
     </header>
     <nav>
