--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Kim L. Griffiths</h1>
-        <img src="https://ch3301files.storage.live.com/y4pZBFvDSfkgHne-kDYdjI5oFh-Zmp6Yj1qfOvODeeFLO78s3O_0gSuadHeVCRN7Y1QhlxeB7GNgEQ6BUriKic9tPP6iDv_Ox3YAD8RgCzNY6_vT2WN8zYWDeXKAclUSx_ksfCHA5UA5Xmulnk0FELPHOL9wJZ1v7QiiJCk60FIHSiq3Q0lyIA3CVG53capgePi6E5MvdY_ag7qhhgvbuSvU0F0uNUNFFTHV5_x9d495IU/kimportrait.jpg?psid=1&width=178&height=240" alt="Image of Kim">
+        <img src="C:\Users\kgrif\github\kgriffiths63.github.io\images\kimportrait.jpg" alt="Image of Kim">
         
     </header>
     <nav>
