--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Kim L. Griffiths</h1>
-        <img src="C:\Users\kgrif\github\kgriffiths63.github.io\images\kimportrait.jpg" alt="Image of Kim">
+        <img src="images/kimportrait.jpg" alt="Image of Kim">
         
     </header>
     <nav>
